services/11-ceph/object-swift/object-swift-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-rgw-swift
  namespace: rook-ceph
  labels:
    app: rook-ceph-rgw
    ceph_daemon_id: swift
    rgw: swift
    rook_cluster: rook-ceph
    rook_object_store: swift
  annotations:
    certmanager.k8s.io/cluster-issuer: "internal"
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
    - host: swift.k8s.grigri
      http:
        paths:
          - path: /
            backend:
              serviceName: rook-ceph-rgw-swift
              servicePort: 80
  tls:
    - hosts:
      - swift.k8s.grigri
      secretName: swift-tls
